Changed to the notebook, separating load_split into different load and split folders, fixing One_Hot_Enc errors

--- a/flights_notebook.ipynb
+++ b/flights_notebook.ipynb
@@ -2,415 +2,148 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from library.load_split.load_split import Load_Split\n",
+    "from library.load.load import Load\n",
     "from library.features.features import Polynomial, Standardize, One_Hot_Enc\n",
     "from library.model.model import Model\n",
     "from library.preprocessor.preprocessor import PreProcessor\n",
     "from library.metrics.metrics import Metrics\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from library.split.split import Split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/luisquinonespr/code/CDS_Final/library/preprocessor/preprocessor.py:11: FutureWarning: The default value of numeric_only in DataFrame.mean is deprecated. In a future version, it will default to False. In addition, specifying 'numeric_only=None' is deprecated. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
-      "  self.fill = self.df.fillna(self.df.mean())\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Loading Data\n",
-    "df = Load_Split('flights_data.csv')\n",
     "\n",
-    "subset = ['destination_city', 'source_city', 'class']\n",
+    "df = Load('flights_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subset = ['flight', 'destination_city', 'source_city', 'class']\n",
     "\n",
-    "# Cleaning Data for Train\n",
-    "train = PreProcessor(df.train)\n",
-    "train.clean(subset)\n",
-    "train = train.clean\n",
+    "# Cleaning Data\n",
+    "df = PreProcessor(df.df)\n",
+    "df.clean(subset) # dropping any NAs in flight, destination city, source city or class\n",
+    "df_clean = df.clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subset_mean = ['duration','days_left']\n",
     "\n",
-    "# Cleaning Data for Test\n",
-    "test = PreProcessor(df.test)\n",
-    "test.clean(subset)\n",
-    "test = test.clean\n",
+    "# Fill other NAs with mean\n",
+    "df_clean = PreProcessor(df_clean)\n",
+    "df_clean.mean_na(df_clean.df[subset_mean])\n",
+    "df_clean = df_clean.fill"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating features\n",
     "\n",
+    "# We don't want to create features for 'price' so we save it before dropping it\n",
+    "y = df_clean['price']\n",
+    "df_feat = df_clean.drop(['Unnamed: 0', 'price'], axis = 1)\n",
     "\n",
+    "# Creating polynomial features\n",
+    "col_names = ['duration', 'days_left']\n",
+    "poly = df_feat[col_names]\n",
+    "poly = Polynomial(poly)\n",
+    "poly = poly.transform(2).drop('1', axis = 1)\n",
+    "col_names2 = ['duration', 'days_left', 'duration^2','duration days_left', 'days_left^2']\n",
+    "df_feat[col_names2] = poly\n",
     "\n",
-    "# Fill NA with mean for Train Data\n",
-    "train = PreProcessor(train)\n",
-    "train.mean_na(train.df[subset])\n",
-    "train = train.fill\n",
+    "# We only want to standardize the numerical columns, excluding 'price'\n",
+    "features = df_feat[col_names2]\n",
+    "scaler = Standardize(features)\n",
+    "features = scaler.transform()\n",
+    "df_feat[col_names2] = features\n",
     "\n",
+    "# One-Hot Encoding our categorical variables\n",
+    "df_feat = One_Hot_Enc(df_feat).transform()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Getting our target variable back to split the data\n",
+    "df_feat['price'] = y\n",
     "\n",
-    "# Fill NA with mean for Test Data\n",
-    "test = PreProcessor(test)\n",
-    "test.mean_na(test.df[subset])\n",
-    "test = test.fill\n",
+    "# Splitting between test and train samples\n",
+    "df = Split(df_feat)\n",
+    "test = df.test\n",
+    "train = df.train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Declaring our X matrices \n",
+    "X_train = train.drop('price', axis = 1)\n",
+    "X_test = test.drop('price', axis = 1)\n",
     "\n",
-    "# Train Data Features \n",
-    "\n",
-    "# We don't want to standardize 'price' so we save it before dropping it from our Standardization\n",
+    "# Declaring our target variable\n",
     "y_train = train['price']\n",
-    "y_test = test['price']\n",
-    "\n",
-    "train = train.drop('price', axis = 1)\n",
-    "train = Standardize(train.select_dtypes(exclude = ['object']))\n",
-    "train = train.transform()\n",
-    "\n",
-    "train = One_Hot_Enc(train.select_dtypes(exclude = ['object']))\n",
-    "train = train.transform()\n",
-    "\n",
-    "train = Polynomial(train.select_dtypes(exclude = ['object']))\n",
-    "train = train.transform(2)\n",
-    "\n",
-    "# Test Data Features \n",
-    "\n",
-    "test = test.drop('price', axis = 1)\n",
-    "test = Standardize(test.select_dtypes(exclude =['object']))\n",
-    "test = test.transform()\n",
-    "\n",
-    "test = One_Hot_Enc(test.select_dtypes(exclude = ['object']))\n",
-    "test = test.transform()\n",
-    "\n",
-    "test = Polynomial(test.select_dtypes(exclude =['object']))\n",
-    "test = test.transform(2)\n",
-    "\n",
-    "# Declaring our X matrixes \n",
-    "X_test = test\n",
-    "X_train = train\n",
-    "\n",
+    "y_test = test['price']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Training the model\n",
     "model = Model(X_train, y_train)\n",
     "model.train(reg = \"l2\")\n",
     "y_pred_train = model.predict(X_train)\n",
     "prediction = model.predict(X_test)\n",
-    "test['predictions'] = prediction\n",
-    "\n",
-    "\n",
+    "test['predictions'] = prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Scoring \n",
-    "\n",
     "print('Test Score')\n",
     "score = Metrics.mse(y_test, test['predictions'])\n",
     "\n",
-    "score\n"
+    "print('Test Score is:' + score)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>1</th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>days_left</th>\n",
-       "      <th>Unnamed: 0^2</th>\n",
-       "      <th>Unnamed: 0 duration</th>\n",
-       "      <th>Unnamed: 0 days_left</th>\n",
-       "      <th>duration^2</th>\n",
-       "      <th>duration days_left</th>\n",
-       "      <th>days_left^2</th>\n",
-       "      <th>predictions</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.203704</td>\n",
-       "      <td>0.501963</td>\n",
-       "      <td>-0.149230</td>\n",
-       "      <td>0.041495</td>\n",
-       "      <td>0.102252</td>\n",
-       "      <td>-0.030399</td>\n",
-       "      <td>0.251967</td>\n",
-       "      <td>-0.074908</td>\n",
-       "      <td>0.022270</td>\n",
-       "      <td>2271.02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.701340</td>\n",
-       "      <td>2.078687</td>\n",
-       "      <td>1.032409</td>\n",
-       "      <td>0.491877</td>\n",
-       "      <td>1.457866</td>\n",
-       "      <td>0.724069</td>\n",
-       "      <td>4.320939</td>\n",
-       "      <td>2.146054</td>\n",
-       "      <td>1.065868</td>\n",
-       "      <td>8739.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.570587</td>\n",
-       "      <td>1.336208</td>\n",
-       "      <td>-0.444639</td>\n",
-       "      <td>0.325570</td>\n",
-       "      <td>0.762424</td>\n",
-       "      <td>-0.253706</td>\n",
-       "      <td>1.785453</td>\n",
-       "      <td>-0.594131</td>\n",
-       "      <td>0.197704</td>\n",
-       "      <td>2055.11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-0.893175</td>\n",
-       "      <td>0.004196</td>\n",
-       "      <td>-0.518492</td>\n",
-       "      <td>0.797762</td>\n",
-       "      <td>-0.003748</td>\n",
-       "      <td>0.463104</td>\n",
-       "      <td>0.000018</td>\n",
-       "      <td>-0.002176</td>\n",
-       "      <td>0.268834</td>\n",
-       "      <td>1033.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-1.236879</td>\n",
-       "      <td>-0.957967</td>\n",
-       "      <td>1.697080</td>\n",
-       "      <td>1.529869</td>\n",
-       "      <td>1.184889</td>\n",
-       "      <td>-2.099083</td>\n",
-       "      <td>0.917701</td>\n",
-       "      <td>-1.625747</td>\n",
-       "      <td>2.880081</td>\n",
-       "      <td>892.26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150072</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-1.335358</td>\n",
-       "      <td>1.325085</td>\n",
-       "      <td>1.253966</td>\n",
-       "      <td>1.783182</td>\n",
-       "      <td>-1.769463</td>\n",
-       "      <td>-1.674494</td>\n",
-       "      <td>1.755850</td>\n",
-       "      <td>1.661611</td>\n",
-       "      <td>1.572430</td>\n",
-       "      <td>1871.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150073</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.471785</td>\n",
-       "      <td>-0.412927</td>\n",
-       "      <td>0.220032</td>\n",
-       "      <td>0.222581</td>\n",
-       "      <td>-0.194813</td>\n",
-       "      <td>0.103808</td>\n",
-       "      <td>0.170508</td>\n",
-       "      <td>-0.090857</td>\n",
-       "      <td>0.048414</td>\n",
-       "      <td>136.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150074</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.579440</td>\n",
-       "      <td>0.501963</td>\n",
-       "      <td>0.884704</td>\n",
-       "      <td>2.494632</td>\n",
-       "      <td>0.792820</td>\n",
-       "      <td>1.397337</td>\n",
-       "      <td>0.251967</td>\n",
-       "      <td>0.444088</td>\n",
-       "      <td>0.782701</td>\n",
-       "      <td>8487.22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150075</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.332509</td>\n",
-       "      <td>-1.027488</td>\n",
-       "      <td>-0.001525</td>\n",
-       "      <td>1.775580</td>\n",
-       "      <td>-1.369136</td>\n",
-       "      <td>-0.002032</td>\n",
-       "      <td>1.055731</td>\n",
-       "      <td>0.001567</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>7992.67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150076</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.585622</td>\n",
-       "      <td>-1.362576</td>\n",
-       "      <td>0.515442</td>\n",
-       "      <td>0.342953</td>\n",
-       "      <td>-0.797954</td>\n",
-       "      <td>0.301854</td>\n",
-       "      <td>1.856614</td>\n",
-       "      <td>-0.702329</td>\n",
-       "      <td>0.265680</td>\n",
-       "      <td>125.98</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>150077 rows × 11 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          1  Unnamed: 0  duration  days_left  Unnamed: 0^2  \\\n",
-       "0       1.0    0.203704  0.501963  -0.149230      0.041495   \n",
-       "1       1.0    0.701340  2.078687   1.032409      0.491877   \n",
-       "2       1.0    0.570587  1.336208  -0.444639      0.325570   \n",
-       "3       1.0   -0.893175  0.004196  -0.518492      0.797762   \n",
-       "4       1.0   -1.236879 -0.957967   1.697080      1.529869   \n",
-       "...     ...         ...       ...        ...           ...   \n",
-       "150072  1.0   -1.335358  1.325085   1.253966      1.783182   \n",
-       "150073  1.0    0.471785 -0.412927   0.220032      0.222581   \n",
-       "150074  1.0    1.579440  0.501963   0.884704      2.494632   \n",
-       "150075  1.0    1.332509 -1.027488  -0.001525      1.775580   \n",
-       "150076  1.0    0.585622 -1.362576   0.515442      0.342953   \n",
-       "\n",
-       "        Unnamed: 0 duration  Unnamed: 0 days_left  duration^2  \\\n",
-       "0                  0.102252             -0.030399    0.251967   \n",
-       "1                  1.457866              0.724069    4.320939   \n",
-       "2                  0.762424             -0.253706    1.785453   \n",
-       "3                 -0.003748              0.463104    0.000018   \n",
-       "4                  1.184889             -2.099083    0.917701   \n",
-       "...                     ...                   ...         ...   \n",
-       "150072            -1.769463             -1.674494    1.755850   \n",
-       "150073            -0.194813              0.103808    0.170508   \n",
-       "150074             0.792820              1.397337    0.251967   \n",
-       "150075            -1.369136             -0.002032    1.055731   \n",
-       "150076            -0.797954              0.301854    1.856614   \n",
-       "\n",
-       "        duration days_left  days_left^2  predictions  \n",
-       "0                -0.074908     0.022270      2271.02  \n",
-       "1                 2.146054     1.065868      8739.00  \n",
-       "2                -0.594131     0.197704      2055.11  \n",
-       "3                -0.002176     0.268834      1033.12  \n",
-       "4                -1.625747     2.880081       892.26  \n",
-       "...                    ...          ...          ...  \n",
-       "150072            1.661611     1.572430      1871.50  \n",
-       "150073           -0.090857     0.048414       136.12  \n",
-       "150074            0.444088     0.782701      8487.22  \n",
-       "150075            0.001567     0.000002      7992.67  \n",
-       "150076           -0.702329     0.265680       125.98  \n",
-       "\n",
-       "[150077 rows x 11 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "167841     6461\n",
-       "210970    59033\n",
-       "199638     6147\n",
-       "72777      4593\n",
-       "42989      5622\n",
-       "          ...  \n",
-       "34454      5950\n",
-       "191075     1830\n",
-       "287073    51595\n",
-       "265672    31982\n",
-       "200941     2622\n",
-       "Name: price, Length: 150077, dtype: int64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "674778018.9880183"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('final')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -424,9 +157,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.7.4"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "2a17f961c752ff9462c4503bfe2f8b6a9a160c2adacb38210098a252b5893e1e"
