Changes to the notebook but no need to merge

--- a/flights_notebook.ipynb
+++ b/flights_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,30 +27,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "subset = ['flight', 'destination_city', 'source_city', 'class']\n",
+    "subset = ['flight', 'price']\n",
     "\n",
     "# Cleaning Data\n",
     "df = PreProcessor(df.df)\n",
-    "df.clean(subset) # dropping any NAs in flight, destination city, source city or class\n",
+    "df.clean(subset) # dropping any NAs in flight or price\n",
     "df_clean = df.clean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "subset_mean = ['duration','days_left']\n",
+    "subset_means = ['duration','days_left']\n",
     "\n",
-    "# Fill other NAs with mean\n",
-    "df_clean = PreProcessor(df_clean)\n",
-    "df_clean.mean_na(df_clean.df[subset_mean])\n",
-    "df_clean = df_clean.fill"
+    "means = df_clean.groupby('flight')[subset_means].mean()\n",
+    "\n",
+    "for col in means:\n",
+    "    df_clean[col] = df_clean.apply(lambda x: means[x.flight] if pd.isnull(x[col]) else x[col], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subset_modes = ['airline','source_city', 'departure_time', 'stops', 'arrival_time', 'destination_city', 'class']\n",
+    "\n",
+    "modes = df_clean.groupby('flight')[subset_modes].agg(pd.Series.mode)\n",
+    "\n",
+    "for col in modes:\n",
+    "    df_clean[col] = df_clean.apply(lambda x: modes[x.flight] if pd.isnull(x[col]) else x[col], axis=1)"
    ]
   },
   {
