getting rid of reg

--- a/flights_notebook.ipynb
+++ b/flights_notebook.ipynb
@@ -11,7 +11,8 @@
     "from library.model.model import Model\n",
     "from library.preprocessor.preprocessor import PreProcessor\n",
     "from library.metrics.metrics import Metrics\n",
-    "from library.split.split import Split"
+    "from library.split.split import Split\n",
+    "import numpy as np"
    ]
   },
   {
@@ -71,7 +72,7 @@
     "# Creating features\n",
     "\n",
     "# We don't want to create features for 'price' so we save it before dropping it\n",
-    "y = df_clean['price']\n",
+    "y = np.log(df_clean['price'])\n",
     "df_feat = df_clean.drop(['Unnamed: 0', 'price'], axis = 1)\n",
     "\n",
     "# Creating polynomial features\n",
@@ -137,7 +138,7 @@
    "source": [
     "# Training the model\n",
     "model = Model(X_train, y_train)\n",
-    "model.train(reg = \"l2\")\n",
+    "model.train()\n",
     "y_pred_train = model.predict(X_train)\n",
     "prediction = model.predict(X_test)\n",
     "test['predictions'] = prediction"
@@ -153,7 +154,7 @@
      "output_type": "stream",
      "text": [
       "Test Score\n",
-      "Test Score is:632945731.4046786\n"
+      "Test Score is:36239356.09029639\n"
      ]
     }
    ],
