--- a/flights_notebook.ipynb
+++ b/flights_notebook.ipynb
@@ -138,7 +138,7 @@
    "source": [
     "# Training the model\n",
     "model = Model(X_train, y_train)\n",
-    "model.train()\n",
+    "model.train_rf()\n",
     "y_pred_train = model.predict(X_train)\n",
     "prediction = model.predict(X_test)\n",
     "test['predictions'] = prediction"
@@ -154,7 +154,7 @@
      "output_type": "stream",
      "text": [
       "Test Score\n",
-      "Test Score is:36239356.09029639\n"
+      "Test Score is:6005.902463875558\n"
      ]
     }
    ],
