--- a/flights_notebook.ipynb
+++ b/flights_notebook.ipynb
@@ -2,17 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from library.load.load import Load\n",
-    "from library.features.features import Polynomial, Standardize, One_Hot_Enc\n",
-    "from library.model.model import Model\n",
-    "from library.preprocessor.preprocessor import PreProcessor\n",
-    "from library.metrics.metrics import Metrics\n",
-    "from library.split.split import Split\n",
-    "import numpy as np"
+    "from src.library.load.load import Load\n",
+    "from src.library.features.features import Polynomial, Standardize, One_Hot_Enc\n",
+    "from src.library.model.model import Model\n",
+    "from src.library.preprocessor.preprocessor import PreProcessor\n",
+    "from src.library.metrics.metrics import Metrics\n",
+    "from src.library.split.split import Split"
    ]
   },
   {
@@ -169,7 +168,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -183,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.4"
   },
   "vscode": {
    "interpreter": {
