--- a/flights_notebook.ipynb
+++ b/flights_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,51 +27,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "subset = ['flight', 'destination_city', 'source_city', 'class']\n",
+    "subset = ['flight', 'price']\n",
     "\n",
     "# Cleaning Data\n",
     "df = PreProcessor(df.df)\n",
-    "df.clean(subset) # dropping any NAs in flight, destination city, source city or class\n",
+    "df.clean(subset) # dropping any NAs in flight or price\n",
     "df_clean = df.clean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/luisquinonespr/code/CDS_Final/src/library/preprocessor/preprocessor.py:11: FutureWarning: The default value of numeric_only in DataFrame.mean is deprecated. In a future version, it will default to False. In addition, specifying 'numeric_only=None' is deprecated. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
-      "  self.fill = self.df.fillna(self.df.mean())\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "subset_mean = ['duration','days_left']\n",
     "\n",
-    "# Fill other NAs with mean\n",
-    "df_clean = PreProcessor(df_clean)\n",
-    "df_clean.mean_na(df_clean.df[subset_mean])\n",
-    "df_clean = df_clean.fill"
+    "# Fill NAs for numerical variables with mean by flight\n",
+    "cmeans = PreProcessor(df_clean)\n",
+    "cmeans.conditional_means(df_clean, subset_mean)\n",
+    "data_clean = cmeans.fill_means"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subset_mode = ['airline','source_city', 'departure_time', 'stops', 'arrival_time', 'destination_city', 'class']\n",
+    "\n",
+    "# Fill NAs for categorical variables with mode by flight\n",
+    "cmodes = PreProcessor(data_clean)\n",
+    "cmodes.conditional_modes(df_clean, subset_mode)\n",
+    "data_clean = cmodes.fill_modes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Creating features\n",
     "\n",
     "# We don't want to create features for 'price' so we save it before dropping it\n",
-    "y = np.log(df_clean['price'])\n",
+    "y = df_clean['price']\n",
     "df_feat = df_clean.drop(['Unnamed: 0', 'price'], axis = 1)\n",
     "\n",
     "# Creating polynomial features\n",
@@ -91,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +158,7 @@
      "output_type": "stream",
      "text": [
       "Test Score\n",
-      "Test Score is:6039.7212039906335\n"
+      "Test Score is: 25255.146793028827\n"
      ]
     }
    ],
@@ -162,7 +167,7 @@
     "print('Test Score')\n",
     "score = Metrics.mse(y_test, test['predictions'])\n",
     "\n",
-    "print('Test Score is:' + str(score))"
+    "print('Test Score is: ' + str(score))"
    ]
   }
  ],
